# quiz-language-learning

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  release.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: auto-release.yml  ci.yml  release.yml
alembic/: env.py
alembic/versions/: 0fb88aa6dee8_drop_profile_new_cards_per_day.py  ec1830514bf9_initial_schema.py  fa44adc5d683_learning_blocks_exercises_deck_kind_.py
app/: config.py  db.py  deps.py  main.py  models.py  scheduler.py  seed.py  srs.py
app/routers/: blocks.py  decks.py  profiles.py  stats.py  study.py
app/static/css/: app.css
app/static/js/: quiz.js
app/templates/: base.html  blocks.html  dashboard.html  deck_detail.html  decks.html  profiles.html  stats.html
app/templates/study/: _choice.html  _ex_choice.html  _ex_feedback.html  _ex_typed.html  _feedback.html  _flashcards.html  _quiz.html  (+4 more)
docs/: content-authoring.md
seed/: blocks.json  conj_a1.csv  conj_a2.csv  conj_b1.csv  conj_b2.csv  es_ru_basic.csv  gap_a1.csv  gap_a2.csv  gap_b1.csv  gap_b2.csv  imperativo_afirmativo_negativo.csv  imperativo_pronombres.csv  irregular_condicional.csv  irregular_futuro.csv  irregular_imperativo.csv  irregular_imperfecto.csv  irregular_indefinido.csv  irregular_perfecto.csv  irregular_presente.csv  irregular_subjuntivo.csv  words_a1.csv  words_a2.csv  words_b1.csv  words_b2.csv
tests/: conftest.py  test_api.py  test_blocks.py  test_scheduler.py  test_srs.py
